--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "npx @tailwindcss/cli -i ./src/input.css -o ./dist/css/style.css --watch"
+    "dev": "npx @tailwindcss/cli -i ./src/input.css -o ./assets/css/style.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.19",
     "tailwindcss": "^4.1.11"
   }
 }
